<resources>
    <string name="app_name">NasTelonas</string>
    <string name="titulo">Título</string>
    <string name="sinopse_do_filme">sinopse do filme ...</string>
    <string name="avaliacao">8.1/10</string>
    <string name="duracao">120 min</string>
    <string name="ano">2017</string>
    <string name="poster">poster</string>
    <string name="trailer">Trailer:</string>
    <string name="trailer_titulo">trailer titulo</string>
    <string name="configuracoes">Configurações</string>


    <string name="pref_acao">28</string>
    <string name="pref_aventura">12</string>
    <string name="pref_animacao">16</string>
    <string name="pref_comedia">35</string>
    <string name="pref_crime">80</string>
    <string name="pref_documentario">99</string>
    <string name="pref_drama">18</string>
    <string name="pref_familia">10751</string>
    <string name="pref_fantasia">14</string>
    <string name="pref_historia">36</string>
    <string name="pref_terror">27</string>
    <string name="pref_musica">10402</string>
    <string name="pref_misterio">9648</string>
    <string name="pref_romance">10749</string>
    <string name="pref_ficcao">878</string>
    <string name="pref_guerra">10752</string>
    <string name="pref_faroeste">37</string>



    <!-- Opçoes generos valores-->
    <string name="acao">Ação</string>
    <string name="animacao">Animação</string>
    <string name="aventura">Aventura</string>
    <string name="comedia">Comédia</string>
    <string name="crime">Crime</string>
    <string name="documentario">Documentário</string>
    <string name="drama">Drama</string>
    <string name="familia">Família</string>
    <string name="fantasia">Fantasia</string>
    <string name="faroeste">Faroeste</string>
    <string name="ficcao">Ficção Científica</string>
    <string name="guerra">Guerra</string>
    <string name="historia">História</string>
    <string name="misterio">Mistério</string>
    <string name="musica">Música</string>
    <string name="romance">Romance</string>
    <string name="terror">Terror</string>
    <string name="aguarde_um_instante">Aguarde um instante.</string>


    <!-- Opçoes generos padrão -->
    <bool name="acao">true</bool>
    <bool name="aventura">true</bool>
    <bool name="animacao">true</bool>
    <bool name="comedia">true</bool>
    <bool name="crime">true</bool>
    <bool name="documentario">true</bool>
    <bool name="drama">true</bool>
    <bool name="familia">true</bool>
    <bool name="fantasia">true</bool>
    <bool name="historia">true</bool>
    <bool name="terror">true</bool>
    <bool name="musica">true</bool>
    <bool name="misterio">true</bool>
    <bool name="romance">true</bool>
    <bool name="ficcao">true</bool>
    <bool name="guerra">true</bool>
    <bool name="faroeste">true</bool>



    <string-array name="generos_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="generos_entries">
        <item>Ação</item>
        <item>Romance</item>
        <item>Terror</item>
    </string-array>

</resources>
