<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.lucenasistemas.nastelonas.activity.DetailActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="4dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/colorWrite"
            android:layout_gravity="center"
            android:text="@string/titulo"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:transitionName="@string/poster"
                        android:contentDescription="@string/poster" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_ano"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="22sp"
                            android:text="@string/ano"/>

                        <TextView
                            android:id="@+id/txt_duracao"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/duracao"/>
                        <TextView
                            android:id="@+id/txt_avaliacao"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@android:color/background_dark"
                            android:text="@string/avaliacao"/>
                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:id="@+id/txt_sinopse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/sinopse_do_filme"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/background_dark"/>
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trailer"
                        android:textSize="18sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="20dp">
                        <ImageView
                            android:id="@+id/img_play"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_media_play"
                            />
                        <TextView
                            android:id="@+id/txt_trailer_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/trailer_titulo"/>
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>



    </ScrollView>


</LinearLayout>
